# knowforge

./: .gitignore  LICENSE  agents.md  codecov.yml  validate-commit.js
.agents/skills/knowforge-github-issues/: SKILL.md
.agents/skills/nextjs-expert/: SKILL.md
.githooks/: commit-msg  pre-push
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: api-tests.yml  back-quality.yml  infra.yml
api/: .env.example  .gitignore  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_create_rag_mvp_tables.py
api/app/api/routes/: chat.py  files.py
api/app/core/: constants.py  settings.py
api/app/db/: session.py
api/app/db/models/: __init__.py  rag.py
api/app/schemas/: chat.py  files.py
api/app/services/: ai_embeddings.py  ai_llm.py  local_chat_rag.py  local_file_storage.py  rag_chat_service.py  rag_ingestion.py
api/app/services/repositories/: rag_repository.py
api/app/types/: enums.py
api/tests/: test_ai_embeddings.py  test_ai_llm.py  test_basic_routes.py  test_db_session.py  test_files_status_route.py  test_files_upload_route.py  test_local_file_storage.py  test_rag_chat_service.py  test_rag_ingestion.py  test_rag_repository.py
back/: .dockerignore  Dockerfile  lambda_handler.py  main.py  pyproject.toml  utils.py
back/api/: document_response.py  main.py
back/api/routes/: chats.py  documents.py
back/api/schemas/: chats.py  documents.py
back/db/: models.py  session.py
back/db/factories/: documents.py
back/db/migrations/: env.py
back/db/migrations/versions/: 001_create_documents_table.py  002_create_documents_chunks_table.py  003_create_chats_messages_and_message_.py
back/db/repositories/: chats.py  documents.py
back/db/services/: chat_messages.py  document_upload.py
back/rag/: config.py  llama_settings.py  mime.py  s3.py  upload.py  vector_store.py
back/rag/indexing/: chunk.py  embed.py  errors.py  extract.py  image.py  pipeline.py  sanitize.py  text.py
back/rag/query/: memory.py  multimodal_chat.py  prompts.py  retriever.py  service.py  sources.py  text_chat.py  types.py
back/tests/: conftest.py  test_config.py  test_main_cli.py  test_utils.py
back/tests/api/: test_chat_schemas.py  test_chats.py  test_document_response.py  test_documents.py  test_main.py  test_schemas.py
back/tests/db/: test_factories.py  test_models.py  test_repositories.py  test_repositories_chats.py  test_session.py
back/tests/helpers/: chats.py  constants.py  embeddings.py  files.py  vector_store.py
back/tests/rag/: test_indexing_chunk.py  test_indexing_embed.py  test_indexing_embed_openai.py  test_indexing_errors.py  test_indexing_extract.py  test_indexing_image_pipeline.py  test_indexing_pipeline.py  test_indexing_sanitize.py  test_llama_settings.py  test_memory.py  test_mime.py  test_multimodal_chat.py  test_query_service.py  test_retriever.py  test_s3.py  test_upload.py  test_upload_validation.py  test_vector_store.py
back/tests/services/: test_chat_messages.py  test_document_upload.py
front/: package-lock.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/components/: Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
front/src/hooks/: useDocumentUpload.ts
front/src/lib/: api.ts  chatCache.ts  documents.ts  fileHash.ts  theme.ts  uploadErrors.ts  uploadQueue.ts
infra/: .terraform.lock.hcl  backend.hcl.example  ecr.tf  lambda.tf  outputs.tf  provider.tf  s3.tf  tfstate.tf  variables.tf
scripts/: back-quality.sh  setup-git-hooks.sh
views/: .env.example  package.json  pnpm-lock.yaml  vitest.config.ts
(+60 files in other folders)
