[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.8",
    "fastapi>=0.136.1",
    "llama-index>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "openai>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn>=0.47.0",
]


