[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.8",
    "fastapi>=0.136.1",
    "llama-index>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-postgres>=0.8.1",
    "openai>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "moto[s3]>=5.0.0",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
    "types-boto3[s3]>=1.37.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["api", "db", "rag", "main.py", "utils.py"]
omit = ["db/migrations/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = ["db/migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
files = ["api", "db", "rag", "main.py", "utils.py"]
exclude = ["db/migrations/"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.uv]
package = false

